@@ -386,7 +386,7 @@ int MAIN_ZABBIX_ENTRY(void)
 
 	int		server_num = 0;
 
-	if(CONFIG_LOG_FILE == NULL)
+	if(CONFIG_LOG_FILE == NULL || '\0' == *CONFIG_LOG_FILE)
 	{
 		zabbix_open_log(LOG_TYPE_SYSLOG,CONFIG_LOG_LEVEL,NULL);
 	}
