@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-3] fixed logging into syslog, Zabbix log levels are properly linked to syslog levels (Dmitry)
  - [ZBX-1957] fixed compilation errors under OpenBSD (Sasha)
  - [ZBX-1869] fixed graph max Y most top value calculation (Aly)
  - [ZBX-1948] fixed node disappearing after node deleted and then created with same ID (Vedmak)
